# mal

./: CHANGELOG.md  LICENSE  README.md  mal.cabal  test.mal
.github/workflows/: tests.yml
app/: Main.hs
editor/: Main.hs
editor/Mal/Editor/: Actions.hs  Application.hs  ExecutionWindow.hs  FileManager.hs  InfoBar.hs  MenuBar.hs  MessageDialog.hs  State.hs  Statusbar.hs  TextEditor.hs  Toolbar.hs  Types.hs
editor/Mal/Editor/Application/: Handle.hs
editor/Mal/Editor/Gui/: MenuBar.hs  TextEditor.hs  Toolbar.hs
editor/Mal/Editor/Notification/: Handle.hs  Renderer.hs
examples/: fizzbuzz.mal  readme_example.mal  todo.mal
mal/: core.mal
src/: Mal.hs  Parser.hs  Types.hs
src/Mal/: Class.hs  Error.hs  PrettyPrinter.hs  Types.hs
src/Mal/Internal/: Builtin.hs  Environment.hs  Interpreter.hs  Parser.hs  Types.hs  Util.hs
tests/: MalTests.hs
