cabal-version:      3.0
name:               mal
version:            0.1.0.0
homepage:           https:/github.com/aloussase/mal.git
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
extra-source-files: README.md

library
    exposed-modules:
          Mal
        , Mal.Class
        , Mal.Error
        , Mal.Types
        , Mal.PrettyPrinter
        , Mal.Internal.Builtin
        , Mal.Internal.Environment
        , Mal.Internal.Interpreter
        , Mal.Internal.Parser
        , Mal.Internal.Util
    build-depends:
          base                 ^>=4.15.1
        , megaparsec           >= 9.2.1 && < 9.3
        , containers           >= 0.6.4 && < 0.7
        , vector               >= 0.13.0 && < 0.14
        , transformers         >= 0.5.6 && < 0.6
        , pretty-simple        >= 4.1.1 && < 4.2
        , lens                 >= 5.2 && < 5.3
        , stm                  >= 2.5.0 && < 2.6
        , text                 >= 1.2.5 && < 1.3
    hs-source-dirs:   src
    default-extensions: OverloadedStrings, BangPatterns
    default-language: Haskell2010
    ghc-options: -Wall -Wunused-packages

executable mal
    main-is:          Main.hs
    build-depends:
          base                 ^>=4.15.1
        , mal
        , optparse-applicative >= 0.17.0 && < 0.18
        , readline             >= 1.0.3 && < 1.1
        , text                 >= 1.2.5 && < 1.3
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite mal-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MalTests.hs
    build-depends:
          base ^>=4.15.1
        , mal
        , hspec
