cabal-version:      3.0
name:               mal
version:            0.1.0.0
homepage:           https:/github.com/aloussase/mal.git
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
extra-source-files: README.md

library
    exposed-modules:
          Mal
        , Mal.Class
        , Mal.Error
        , Mal.Types
        , Mal.PrettyPrinter
        , Mal.Internal.Builtin
        , Mal.Internal.Environment
        , Mal.Internal.Interpreter
        , Mal.Internal.Parser
        , Mal.Internal.Util
    build-depends:
          base                 ^>=4.15.1
        , containers           >= 0.6.4 && < 0.7
        , lens                 >= 5.2 && < 5.3
        , megaparsec           >= 9.2.1 && < 9.3
        , pretty-simple        >= 4.1.1 && < 4.2
        , stm                  >= 2.5.0 && < 2.6
        , text
        , transformers         >= 0.5.6 && < 0.6
        , vector               >= 0.13.0 && < 0.14
    hs-source-dirs:   src
    default-extensions: OverloadedStrings, BangPatterns
    default-language: Haskell2010
    ghc-options: -Wall -Wunused-packages

executable mal
    main-is:          Main.hs
    build-depends:
          base                 ^>=4.15.1
        , mal
        , optparse-applicative
        , readline
        , text
    hs-source-dirs:   app
    default-language: Haskell2010

executable mal-editor
    main-is:          Main.hs
    other-modules:    Mal.Editor.State
                    , Mal.Editor.Gui.TextEditor
                    , Mal.Editor.Gui.Toolbar
                    , Mal.Editor.Gui.MenuBar
    ghc-options:      -Wall -Wunused-packages
    build-depends:
          mal
        , base                          ^>=4.15.1
        , gi-gtk                        >=4.0.5 && <=4.0.6
        , gi-gio
        , haskell-gi-base               >= 0.26.1 && < 0.27
        , haskell-gi-overloading        ==0.0.*
        , text
    hs-source-dirs:   editor
    default-language: Haskell2010
    default-extensions: OverloadedStrings

test-suite mal-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MalTests.hs
    build-depends:
          base ^>=4.15.1
        , mal
        , hspec
